--- a/contributions.html
+++ b/contributions.html
@@ -1,184 +1,74 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="style/style-contributions.css">
-    <link rel="stylesheet" href="https://unpkg.com/swiper@7/swiper-bundle.min.css" />
-    <link rel="icon" href="Images/logoE.png">
-    <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
-    <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>  
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="css/style-contributions.css">
     <title>Contributions</title>
 </head>
 
 <body>
-    <div class="sidebar">
-        <div class="logo-details">
-          <img class="bx icon" src="Images/logoE.png"></img>
-            <div class="logo_name">Plan cancer</div>
-            <i class='bx bx-menu' id="btn" ></i>
+
+    <section class="contribute-sec">
+
+
+
+        <div>
+            <h2>Des contributions proposées par nos médecins..</h2>
         </div>
-        <ul class="nav-list">
-          <li>
-              <i class='bx bx-search'></i>
-             <input type="text" placeholder="Recherche...">
-             <span class="tooltip">Recherche</span>
-          </li>
-          <li>
-            <a class="flyer" href="index.html">
-              <i class='bx bxs-home-heart fly'></i>
-              <span class="links_name">Accueil</span>
-            </a>
-             <span class="tooltip">Accueil</span>
-          </li>
-          <li>
-           <a class="flyer" href="#">
-             <i class='bx bx-plus-medical fly'></i>
-             <span class="links_name">Plan national cancer</span>
-           </a>
-           <span class="tooltip">Plan national cancer</span>
-         </li>
-         <li>
-           <a class="flyer" href="groupe.html">
-             <i class='bx bx-group fly'></i>
-             <span class="links_name">Groupe</span>
-           </a>
-           <span class="tooltip">Groupe</span>
-         </li>
-         <li>
-           <a class="flyer" href="reunion.html">
-             <i class='bx bx-user-voice fly' ></i>
-             <span class="links_name">Réunions</span>
-           </a>
-           <span class="tooltip">Réunions</span>
-         </li>
-         <li>
-           <a class="flyer" href="contributions.html">
-             <i class='bx bx-donate-heart fly' ></i>
-             <span class="links_name">Contributions</span>
-           </a>
-           <span class="tooltip">Contributions</span>
-         </li>
-         <li>
-           <a class="flyer" href="#">
-             <i class='bx bx-edit fly'></i>
-             <span class="links_name">Evaluation</span>
-           </a>
-           <span class="tooltip">Evaluation</span>
-         </li>
-         <li>
-           <a class="flyer" href="#">
-             <i class='bx bx-shape-polygon fly'></i>
-             <span class="links_name">Générateur de rapports</span>
-           </a>
-           <span class="tooltip">Générateur de rapports</span>
-         </li>
-         <li>
-           <a class="flyer" href="#">
-             <i class='bx bx-stats fly'></i>
-             <span class="links_name">Statistiques</span>
-           </a>
-           <span class="tooltip">Statistiques</span>
-         </li>
-         <li>
-          <a class="flyer" href="contact.html">
-            <i class='bx bx-phone-call fly' ></i>
-            <span class="links_name">Contacts</span>
-          </a>
-          <span class="tooltip">Contacts</span>
-        </li>
-        <li>
-          <a class="flyer" href="#">
-            <i class='bx bx-dots-horizontal fly' ></i>
-            <span class="links_name">Autre</span>
-          </a>
-          <span class="tooltip">Autre</span>
-        </li>
-         <li class="profile">
-             <div class="profile-details">
-               <img src="Images/testprofile.jpg" alt="profileImg">
-               <div class="name_job">
-                 <div class="name">Fentazi Riad</div>
-                 <div class="job">I like penguins:p</div>
-               </div>
-             </div>
-             <i class='bx bx-log-out' id="log_out" ></i>
-         </li>
-        </ul>
-      </div>
-    
-      <!-- 2nd page kinda-->
-      <section class="header">
-       <div id="menu-btn"></div>
-         </section>
-  <main>
-    <section class="don-sec" id="donation">
-        <div class="container">
-            <div class="heading">
-                <h2>Des contributions proposées par nos médecins..</h2>
+
+        <div class="grid">
+
+            <div class="contribute-box">
+                <img src="assets/book-medical-solid.svg" alt="img">
+                <h3>Contribution #1</h3>
+                <p>Lorem ipsum dolor sit amet consectetur.</p>
+                <a href="#contact" class="contribute-btn">Lire la suite...</a>
             </div>
-            <div class="row">
-                <div class="col-lg-4">
-                    <div class="don-box">
-                        <img src="assets/book-medical-solid.svg" alt="img">
-                        <h3>Contribution #1</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur.</p>
-                        <a href="#contact" class="btn1">Lire la suite...</a>
-                    </div>
-                </div>
-                <div class="col-lg-4">
-                    <div class="don-box">
-                        <img src="assets/file-waveform-solid.svg" alt="img">
-                        <h3>Contribution #2</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur.</p>
-                        <a href="#contact" class="btn1">Lire la suite...</a>
-                    </div>
-                </div>
-                <div class="col-lg-4">
-                    <div class="don-box">
-                        <img src="assets/heart-pulse-solid.svg" alt="img">
-                        <h3>Contribution #3</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur.</p>
-                        <a href="#contact" class="btn1">Lire la suite...</a>
-                    </div>
-                </div>
-                <div class="col-lg-4">
-                    <div class="don-box">
-                        <img src="assets/staff-aesculapius-solid.svg" alt="img">
-                        <h3>Contribution #4</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur.</p>
-                        <a href="#contact" class="btn1">Lire la suite...</a>
-                    </div>
-                </div>
-                <div class="col-lg-4">
-                    <div class="don-box">
-                        <img src="assets/user-doctor-solid.svg" alt="img">
-                        <h3>Contribution #5</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur.</p>
-                        <a href="#contact" class="btn1">Lire la suite...</a>
-                    </div>
-                </div>
-                <div class="col-lg-4">
-                    <div class="don-box">
-                        <img src="assets/virus-covid-solid.svg" alt="img">
-                        <h3>Contribution #6</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur.</p>
-                        <a href="#contact" class="btn1">Lire la suite...</a>
-                    </div>
-                </div>
+
+
+            <div class="contribute-box">
+                <img src="assets/file-waveform-solid.svg" alt="img">
+                <h3>Contribution #2</h3>
+                <p>Lorem ipsum dolor sit amet consectetur.</p>
+                <a href="#contact" class="contribute-btn">Lire la suite...</a>
             </div>
+
+            <div class="contribute-box">
+                <img src="assets/heart-pulse-solid.svg" alt="img">
+                <h3>Contribution #3</h3>
+                <p>Lorem ipsum dolor sit amet consectetur.</p>
+                <a href="#contact" class="contribute-btn">Lire la suite...</a>
+            </div>
+
+            <div class="contribute-box">
+                <img src="assets/staff-aesculapius-solid.svg" alt="img">
+                <h3>Contribution #4</h3>
+                <p>Lorem ipsum dolor sit amet consectetur.</p>
+                <a href="#contact" class="contribute-btn">Lire la suite...</a>
+            </div>
+
+            <div class="contribute-box">
+                <img src="assets/user-doctor-solid.svg" alt="img">
+                <h3>Contribution #5</h3>
+                <p>Lorem ipsum dolor sit amet consectetur.</p>
+                <a href="#contact" class="contribute-btn">Lire la suite...</a>
+            </div>
+
+            <div class="contribute-box">
+                <img src="assets/virus-covid-solid.svg" alt="img">
+                <h3>Contribution #6</h3>
+                <p>Lorem ipsum dolor sit amet consectetur.</p>
+                <a href="#contact" class="contribute-btn">Lire la suite...</a>
+            </div>
+
         </div>
+
     </section>
-  </main>
-</body>
-<!-- custom js file link  -->
-<script src="js/script.js"></script>
 
 </body>
-</html>
 
 </html>
