--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             <span class="tooltip">Evaluation</span>
          </li>
          <li>
-            <a class="flyer" href="#">
+            <a class="flyer" href="generateur.html">
                <i class='bx bx-shape-polygon fly'></i>
                <span class="links_name">Générateur de rapports</span>
             </a>
@@ -229,6 +229,16 @@
          </div>
 
       </section>
+
+      <!-- 
+         <section>
+
+            <iframe src='https://view.officeapps.live.com/op/embed.aspx?srcwordTest.doc'
+            width='100%' height='650px' frameborder='0'></iframe>
+
+         </section>
+
+      -->
 
       <!-- Fin de la section organisation du commité  -->
 
