Petit à petit on ira plus loin.

--- a/groupe.html
+++ b/groupe.html
@@ -186,6 +186,65 @@
         </div>
       </div>
     </div>
+    <div class="list">
+      <div class="line">
+         <div class="membre enfant">
+             <img src="Images/testprofile.jpg" alt="">
+             <div class="details">
+                 <h1 class="nom">Dr Bouzida</h1>
+                 <h2 class="id" >01</h2>
+             </div>
+         </div>
+         <div class="typeutilisateur enfant">
+             <h2>Admin</h2>
+         </div>
+          <div class="groupe enfant">
+             <h2>touts</h2>
+         </div>
+         <div class="adresse enfant">
+             <h2>INSP, Alger</h2>
+         </div>
+         <div class="Ntel enfant">
+             <h2>+0102030405</h2>
+         </div>
+         <div class="email enfant">
+             <h2>DrBouzida@insp.dz</h2>
+          </div>
+         <div class="dots dernierenfant">
+             <span></span>
+             <span></span>
+             <span></span>
+         </div>
+      </div>
+      <div class="line">
+         <div class="membre enfant">
+             <img src="Images/testprofile.jpg" alt="">
+             <div class="details">
+                 <h1 class="nom">P Zitouni</h1>
+                 <h2 class="id" >02</h2>
+             </div>
+         </div>
+         <div class="typeutilisateur enfant">
+             <h2>Admin</h2>
+         </div>
+          <div class="groupe enfant">
+             <h2>touts</h2>
+         </div>
+         <div class="adresse enfant">
+             <h2>INSP, Alger</h2>
+         </div>
+         <div class="Ntel enfant">
+             <h2>+0102030405</h2>
+         </div>
+         <div class="email enfant">
+             <h2>PZitouni@insp.dz</h2>
+          </div>
+         <div class="dots dernierenfant">
+             <span></span>
+             <span></span>
+             <span></span>
+         </div>
+      </div>
   </main>
   <script src="js/script.js"></script>
   <script src="js/groupe.js"></script>
