creation of plancancer page

--- a/contact.html
+++ b/contact.html
@@ -34,7 +34,7 @@
               <span class="tooltip">Accueil</span>
            </li>
            <li>
-              <a class="flyer" href="#">
+              <a class="flyer" href="plancancer.html">
                  <i class='bx bx-plus-medical fly'></i>
                  <span class="links_name">Plan national cancer</span>
               </a>
