--- a/plancancer.html
+++ b/plancancer.html
@@ -2,16 +2,16 @@
 <html lang="fr">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/contributions.css">
-    <link rel="stylesheet" href="https://unpkg.com/swiper@7/swiper-bundle.min.css" />
-    <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
-  <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
-    <title>Contributions</title>
+   <meta charset="UTF-8">
+   <title>Plan cancer</title>
+   <link rel="stylesheet" href="css/style.css">
+   <!-- Boxicons CDN Link -->
+   <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <link rel="stylesheet" href="https://unpkg.com/swiper@7/swiper-bundle.min.css" />
+   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+   <link rel="icon" href="Images/logoE.png">
+   <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
 </head>
 
 <body>
@@ -71,7 +71,7 @@
             <span class="tooltip">Evaluation</span>
          </li>
          <li>
-            <a class="flyer" href="#">
+            <a class="flyer" href="generateur.html">
                <i class='bx bx-shape-polygon fly'></i>
                <span class="links_name">Générateur de rapports</span>
             </a>
@@ -110,62 +110,13 @@
          </li>
       </ul>
    </div>
-  
-   <section class="contribute-sec">
-
-      <div>
-         <h2>Des contributions proposées par nos médecins..</h2>
-      </div>
-
-      <div class="grid">
-
-            <div class="contribute-box">
-                <img src="assets/book-medical-solid.svg" alt="img">
-                <h3>Contribution #1</h3>
-                <p>Lorem ipsum dolor sit amet consectetur.</p>
-                <a href="#contact" class="contribute-btn">Lire la suite...</a>
-            </div>
-
-
-            <div class="contribute-box">
-                <img src="assets/file-waveform-solid.svg" alt="img">
-                <h3>Contribution #2</h3>
-                <p>Lorem ipsum dolor sit amet consectetur.</p>
-                <a href="#contact" class="contribute-btn">Lire la suite...</a>
-            </div>
-
-            <div class="contribute-box">
-                <img src="assets/heart-pulse-solid.svg" alt="img">
-                <h3>Contribution #3</h3>
-                <p>Lorem ipsum dolor sit amet consectetur.</p>
-                <a href="#contact" class="contribute-btn">Lire la suite...</a>
-            </div>
-
-            <div class="contribute-box">
-                <img src="assets/staff-aesculapius-solid.svg" alt="img">
-                <h3>Contribution #4</h3>
-                <p>Lorem ipsum dolor sit amet consectetur.</p>
-                <a href="#contact" class="contribute-btn">Lire la suite...</a>
-            </div>
-
-            <div class="contribute-box">
-                <img src="assets/user-doctor-solid.svg" alt="img">
-                <h3>Contribution #5</h3>
-                <p>Lorem ipsum dolor sit amet consectetur.</p>
-                <a href="#contact" class="contribute-btn">Lire la suite...</a>
-            </div>
-
-            <div class="contribute-box">
-                <img src="assets/virus-covid-solid.svg" alt="img">
-                <h3>Contribution #6</h3>
-                <p>Lorem ipsum dolor sit amet consectetur.</p>
-                <a href="#contact" class="contribute-btn">Lire la suite...</a>
-            </div>
-
-      </div>
-
-    </section>
-
-</body>
-<script src="js/script.js"></script>
-</html>
+    <main>
+        
+    </main>
+    <!-- fin du conrenu principale -->
+ 
+    <!-- js  -->
+    <script src="js/script.js"></script>
+ </body>
+ 
+ </html>
