--- a/groupe.html
+++ b/groupe.html
@@ -36,7 +36,7 @@
           <span class="tooltip">Accueil</span>
        </li>
        <li>
-          <a class="flyer" href="#">
+          <a class="flyer" href="plancancer.html">
              <i class='bx bx-plus-medical fly'></i>
              <span class="links_name">Plan national cancer</span>
           </a>
