Fixed generator links

--- a/contributions.html
+++ b/contributions.html
@@ -71,7 +71,7 @@
             <span class="tooltip">Evaluation</span>
          </li>
          <li>
-            <a class="flyer" href="#">
+            <a class="flyer" href="generateur.html">
                <i class='bx bx-shape-polygon fly'></i>
                <span class="links_name">Générateur de rapports</span>
             </a>
