fixed js at the end

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
    <link rel="icon" href="Images/logoE.png">
    <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
+   <script src="js/script.js" defer></script>
 </head>
 
 <body>
@@ -272,8 +273,6 @@
    </main>
    <!-- fin du conrenu principale -->
 
-   <!-- js  -->
-   <script src="js/script.js"></script>
 </body>
 
 </html>
